# wireguard-simple-rust-manager

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs
src/tests/: main_test.rs
