[package]
name = "wireguard_simple_rust_manager"
version = "0.0.5"
edition = "2021"
authors = ["Dario Caruso"]
description = "simple crate for wireguard connection"
license = "Apache-2.0"
documentation = "https://docs.rs/wireguard-simple-rust-manager"
repository = "https://github.com/dottgonzo/wireguard-simple-rust-manager"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-simple-ping = { version = "0.0.2" }
defguard_wireguard_rs = { version = "0.4.2" }

[dev-dependencies]
tokio = { version = "1.33.0", features = ["macros"] }
